--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_with(model: @task, local: true) do |f| %>
+<%= form_with(model: task, local: true) do |f| %>
   <% if task.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" class="alert alert-warning">
       <h2><%= pluralize(task.errors.count, "error") %> prohibited this message from being saved:</h2>
 
-      <ul>
+      <ul class="mb-0">
         <% task.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
         <% end %>
