--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,20 +1,9 @@
 <% if logged_in? %>
-  <div class="row">
-    <div class="col-sm-4">
-      <%= form_with(model: @task, local: true) do |f| %>
-        <div class="form-group">
-          <%= f.label :content, '▼タスク' %>
-          <%= f.text_area :content, class: 'form-control', rows: 1 %>
-          <%= f.label :status, '▼ステータス' %>
-          <%= f.text_area :status, class: 'form-control', rows: 1 %>
-        </div>
-        <%= f.submit 'Post', class: 'btn btn-primary btn-block' %>
-      <% end %>
-    </div>
-    <div class="col-sm-8">
+  <h1>タスク一覧</h1>
+  <div class="col-sm-9">
       <%= render 'tasks/tasks', tasks: @tasks %>
-    </div>
   </div>
+　<%= link_to '新規タスク登録', new_task_path, class: "btn btn-primary" %>
 <% else %>
   <div class="center jumbotron">
     <div class="text-center">
