--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -4,14 +4,10 @@
       <img class="mr-2 rounded" src="<%= gravatar_url(task.user, { size: 50 }) %>" alt="">
       <div class="media-body">
         <div>
-          <%= link_to task.user.name, user_path(task.user) %> <span class="text-muted">posted at <%= task.created_at %></span>
+          <%= task.user.name %> <span class="text-muted">posted at <%= task.created_at %></span>
         </div>
         <div>
-          <% if current_user == task.user %>
-            <p>[タスクID] <%= link_to task.id, edit_task_path(task) %>　[ステータス] <%= task.status %>　[タスク] <%= task.content %></p>
-          <% elsif %>
-            <p>[タスクID] <%= task.id %>　[ステータス] <%= task.status %>　[タスク] <%= task.content %></p>
-          <% end %>
+          <p>[タスクID] <%= task.id %>　[ステータス] <%= task.status %>　[タスク] <%= task.content %></p>
         </div>
         <div>
           <% if current_user == task.user %>
