--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -7,7 +7,7 @@
           <%= task.user.name %> <span class="text-muted">posted at <%= task.created_at %></span>
         </div>
         <div>
-          <p>[タスクID] <%= task.id %>　[ステータス] <%= task.status %>　[タスク] <%= task.content %></p>
+          <p>[タスクID] <%= link_to task.id, edit_task_path(task) %>　[ステータス] <%= task.status %>　[タスク] <%= task.content %></p>
         </div>
         <div>
           <% if current_user == task.user %>
